crates/toml/tests/snapshots/invalid/ext/datetime/hour-too-large.stderr
TOML parse error at line 1, column 17
  |
1 | foo = 1997-09-09T30:09:09.09Z
  |                 ^
expected newline, `#`
